// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in GifGrid Component should show items with loading images useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Pacman
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="ZXC"
      url="https://google.com/image"
    />
    <GifGridItem
      id="1234"
      key="1234"
      title="ZXC"
      url="https://google.com/image"
    />
  </div>
</Fragment>
`;

exports[`Test in GifGrid Component should show the component in snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Pacman
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
